# crash-cache

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: schema.md
migrations/00000000000000_initial_schema/: down.sql  up.sql
migrations/postgres/2026-01-28-192800_stacktrace_frames_json_to_text/: down.sql  up.sql
migrations/sqlite/2026-01-28-192800_stacktrace_frames_json_to_text/: down.sql  up.sql
scripts/: load_test.sh  load_test_unique.sh  monitor.sh
src/: cli.rs  lib.rs  main.rs
src/config/: settings.rs
src/features/: mod.rs  serve.rs
src/features/cli/: archive.rs  mod.rs  project.rs  ruminate.rs
src/features/digest/: mod.rs  tests.rs  use_case.rs  worker.rs
src/features/ingest/: handler.rs  mod.rs  tests.rs  use_case.rs
src/features/process_report/: mod.rs  tests.rs  use_case.rs  worker.rs
src/features/receive_report/: handler.rs  mod.rs  tests.rs  use_case.rs
src/shared/: analytics.rs  mod.rs  rate_limit.rs
src/shared/compression/: gzip.rs  mod.rs
src/shared/domain/: archive.rs  crash_metadata.rs  crash_report.rs  error.rs  event.rs  mod.rs  processing_queue_item.rs  project.rs  queue.rs  report_metadata.rs  sentry_report.rs
src/shared/parser/: envelope.rs  mod.rs  sentry_auth.rs  sentry_session.rs
src/shared/persistence/: mod.rs
src/shared/persistence/db/: connection.rs  mod.rs  models.rs  schema.rs
src/shared/persistence/db/repositories/: analytics_repository.rs  archive_repository.rs  device_specs_repository.rs  exception_message_repository.rs  issue_repository.rs  mod.rs  project_repository.rs  queue_repository.rs  report_repository.rs  session_repository.rs  stacktrace_repository.rs  unwrap_repository.rs
src/shared/persistence/sqlite/: connection.rs  mod.rs  models.rs  schema.rs
src/shared/persistence/sqlite/repositories/: analytics_repository.rs  archive_repository.rs  crash_metadata_repository.rs  device_specs_repository.rs  event_repository.rs  exception_message_repository.rs  issue_repository.rs  lookup_repository.rs  mod.rs  project_repository.rs  queue_repository.rs  report_metadata_repository.rs  report_repository.rs  session_repository.rs  stacktrace_repository.rs  unwrap_repository.rs
