[package]
name = "crash-cache"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite"]
postgres = ["diesel/postgres"]

[[bin]]
name = "crash-cache"
path = "src/main.rs"

[[bin]]
name = "crash-cli"
path = "src/cli.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

diesel = { version = "2.2", default-features = false, features = ["r2d2", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

flate2 = "1.0"

sha2 = "0.10"
hex = "0.4"

chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }