[package]
name = "crash-cache"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite"]
postgres = ["diesel/postgres"]

[[bin]]
name = "crash-cache"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.8"
governor = "0.10"

diesel = { version = "2.3", default-features = false, features = ["r2d2", "chrono", "32-column-tables"] }
diesel_migrations = "2.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

flate2 = "1.1"

sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
